feat: Declare the digest categories in the Kernel - EXO-89484 - eXIP7.3.0.22
An addon declaring the category it owns as a Spring bean would never be seen
by the digest: each webapp builds its own bean factory, and only the beans
annotated Service are shared from one context to another. The processes addon
settles it, it holds no Spring at all.

The categories are therefore declared on DigestCategoryRegistry, a Kernel
component, whose container is shared by every webapp. An addon contributes its
category from its own configuration and without a line of Java, whatever it is
made of:

  <target-component>io.meeds.commons.digest.DigestCategoryRegistry</target-component>
  <component-plugin>
    <name>news</name>
    <set-method>addCategoryProvider</set-method>
    <type>io.meeds.commons.digest.plugin.DigestCategoryPlugin</type>
    ...

DigestServiceImpl stays a Spring service and reads the registry, Kernel
components being available to the Spring contexts.

A category must declare an id and the notification plugins it covers, a
category covering nothing being a choice that never brings anything to the
user. Declaring the same category twice keeps the last declaration.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>